frontend-126: * fix wrong font on logo

--- a/frontend/src/assets/css/scaffolding.scss
+++ b/frontend/src/assets/css/scaffolding.scss
@@ -11,7 +11,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Black.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Black.woff2') format('woff2');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Regular.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-ThinItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-ThinItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -35,7 +35,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Semibold.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Semibold.woff2') format('woff2');
 }
 
 @font-face {
@@ -43,7 +43,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-MediumItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-MediumItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -51,7 +51,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Light.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -59,7 +59,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-ExtraboldItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-ExtraboldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -67,7 +67,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-SemiboldItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-SemiboldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Medium.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -83,7 +83,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Extrabold.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Extrabold.woff2') format('woff2');
 }
 
 @font-face {
@@ -91,7 +91,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-UltraLight.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-UltraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -99,7 +99,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Heavy.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Heavy.woff2') format('woff2');
 }
 
 @font-face {
@@ -107,7 +107,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-BoldItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-BoldItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -115,7 +115,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-RegularItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-RegularItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -123,7 +123,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Thin.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -131,7 +131,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-BlackItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-BlackItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -139,7 +139,7 @@
   font-family: Gilroy;
   font-style: normal;
   font-display: swap;
-  src: url('../fonts/Gilroy-Bold.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -147,7 +147,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-LightItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-LightItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -155,7 +155,7 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-HeavyItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-HeavyItalic.woff2') format('woff2');
 }
 
 @font-face {
@@ -163,7 +163,79 @@
   font-family: Gilroy;
   font-style: italic;
   font-display: swap;
-  src: url('../fonts/Gilroy-UltraLightItalic.woff2') format('woff2');
+  src: url('../fonts/girloy/Gilroy-UltraLightItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: 300;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-Light.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: 100;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-Thin.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: 200;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-ExtraLight.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: 500;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: bold;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-Bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: 600;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: normal;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: 900;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-Black.woff2') format('woff2');
+}
+
+@font-face {
+  font-weight: bold;
+  font-family: Inter;
+  font-style: normal;
+  font-display: swap;
+  src: url('../fonts/inter/Inter-ExtraBold.woff2') format('woff2');
 }
 
 :root {
